--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,6 +298,21 @@ body {
 
 .header-area {
   padding: 20px 0;
+  -webkit-transition: .3s;
+  transition: .3s;
+  position: fixed;
+  z-index: 99;
+  left: 0;
+  right: 0;
+}
+
+.header-area.sticky {
+  background-color: #fff;
+  border-bottom: 2px solid #f2f2f2;
+}
+
+.header-area.sticky a {
+  color: #333 !important;
 }
 
 .header-area .logo {
@@ -309,6 +324,7 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 22px;
+  color: #fff;
 }
 
 .header-area .menu {
@@ -329,6 +345,7 @@ body {
   margin-left: 20px;
   font-size: 18px;
   font-weight: 500;
+  color: #fff;
 }
 
 .header-area .menu ul li a:hover {
@@ -337,6 +354,7 @@ body {
 
 .banner-area .banner-content {
   color: #fff;
+  margin-top: 50px;
 }
 
 .banner-area h2 {
