--- a/assets/css/layouts/_header.scss
+++ b/assets/css/layouts/_header.scss
@@ -31,6 +31,11 @@
             text-align: right;
             li{
                 display: inline-block;
+                &.active{
+                    a{
+                        color: $primary !important;
+                    }
+                }
                 a{
                     margin-left: 20px;
                     font-size: 18px;
